--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "bootstrap": "^5.3.5",
+    "cors": "^2.8.5",
     "framer-motion": "^12.7.4",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
@@ -31,6 +32,6 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "vite": "^6.3.2"
+    "vite": "^6.3.3"
   }
 }
