--- a/package.json
+++ b/package.json
@@ -33,6 +33,19 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "vite": "^6.3.3"
-  }
+    "vite": "^6.3.5"
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MinhPhi2504/-Spytifot-.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MinhPhi2504/-Spytifot-/issues"
+  },
+  "homepage": "https://github.com/MinhPhi2504/-Spytifot-#readme"
 }
